# intrusiondetection

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
intrusiondetection/: __about__.py  __init__.py  __main__.py  main.py
