[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intrusiondetection"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "alex", email = "devkral@web.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Kivy",
  "opencv-python-headless",
  "numpy"
]

[project.urls]
Documentation = "https://github.com/alex/intrusiondetection#readme"
Issues = "https://github.com/alex/intrusiondetection/issues"
Source = "https://github.com/alex/intrusiondetection"

[tool.hatch.version]
path = "intrusiondetection/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:intrusiondetection tests}"

[tool.coverage.run]
source_pkgs = ["intrusiondetection", "tests"]
branch = true
parallel = true
omit = [
  "intrusiondetection/__about__.py",
]

[tool.coverage.paths]
intrusiondetection = ["intrusiondetection", "*/intrusiondetection/intrusiondetection"]
tests = ["tests", "*/intrusiondetection/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
